src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/CD4AC3004.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram CD4AC3004 {
	class A {
		/ String a;
		derived String b;
	}
}